--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ main{
     margin: auto;
     /* padding: 20px; */
     padding-left: 60px;
-    padding-right: 20px;
+    padding-right: 30px;
     padding-top: 20px;
     padding-bottom: 20px;
     border-radius: 8px;
@@ -125,4 +125,63 @@ button:hover {
 footer{
     text-align: center;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media (max-width: 600px) {
+    main{
+        /* display: flex;
+        justify-content: space-around;
+        align-items: flex-start; */
+        flex-direction: column;
+    }
+
+    .store-buttons {
+        display: inline-flex;
+        align-items: center; 
+        padding-left: 10px;
+      }
+
+    .color-section{
+        margin: auto;
+        padding-left: 10px;
+        padding-right: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        border-radius: 8px;
+        background-color: aliceblue;
+        font-family: Tahoma, Verdana, sans-serif;
+        font-size: 13px;
+        
+    }
+}
+
+@media (min-width: 600px) and (max-width: 795px) {
+    main{
+        /* display: flex;
+        justify-content: space-around;
+        align-items: flex-start; */
+        flex-direction: column;
+    }
+
+    .store-buttons {
+        display: inline-flex;
+        align-items: center; 
+        padding-left: 10px;
+      }
+
+    .color-section{
+        margin: auto;
+        padding-left: 10px;
+        padding-right: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        border-radius: 8px;
+        background-color: aliceblue;
+        font-family: Tahoma, Verdana, sans-serif;
+        font-size: 13px;
+        
+    }
+  }
+  
+
 
